--- a/index.html
+++ b/index.html
@@ -275,8 +275,7 @@
       "wind-breaker": { title: "WIND BREAKER Season 2 in Hindi", cover: "WIND BREAKER S2.jpg", link: "anime/WIND BREAKER S2.html" },
       "tokyo-revengers": { title: "Tokyo Revengers Season 1", cover: "unnamed (2).jpg", link: "anime/Tokyo Revengers season 1.html" },
       "do-patti": { title: "Do Patti Movie", cover: "Do-patti-(2024)-hindi-movie.jpg", link: "anime/do pati.html" },
-      "the shawshank redemption full movie in hindi ": { title: "the shawshank redemption full movie in hindi ", cover: "download.jpg
-", link: "anime/the shawshank redemption full movie in hindi.html" },
+      "the shawshank redemption full movie in hindi ": { title: "the shawshank redemption full movie in hindi", cover: "download.jpg", link: "anime/the shawshank redemption full movie in hindi.html" },
       "flight-914": { title: "FLIGHT 914 - Hollywood Action Movie", cover: "get.jpg", link: "anime/FLIGHT 914 - Hollywood Action Movie Hindi  .html" },
       "chainsaw man all episodes in one video+ movie": { title: "chainsaw man all episodes in one video+ movie", cover: "images (7).jpeg", link: "anime/chainsaw man.html" }
     };
