--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>wind breaker season 1</title>
+  <title>Wind Breaker Season 1</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     #adBox {
@@ -38,11 +38,12 @@
     }
   </style>
 </head>
+
 <body class="bg-black text-white font-mono">
 
   <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">wind breaker season 1</h1>
-    <p class="text-gray-400 mb-6">wind breaker season 1</p>
+    <h1 class="text-4xl font-bold text-pink-600">Wind Breaker Season 1</h1>
+    <p class="text-gray-400 mb-6">Wind Breaker Season 1</p>
 
     <!-- Video Player -->
     <div class="mb-4">
@@ -97,69 +98,77 @@
 
     const episodes = [
       {
-        title: "wind breaker season 1 episode 1",
+        title: "Wind Breaker Season 1 Episode 1",
         link: "https://drive.google.com/file/d/1pP5nNu6QKWqq26zVEEWaud2LAfAdNVaX/preview",
-        description: "wind breaker season 1 ",
+        description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
-        title: "wind breaker season 1 episode 2",
+        title: "Wind Breaker Season 1 Episode 2",
         link: "https://drive.google.com/file/d/1Awns2ag2uDOnhUcsfxTP1kDbHqMuuSeu/preview",
-        description: "wind breaker season 1 ",
+        description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
-        title: "wind breaker season 1 episode 3",
+        title: "Wind Breaker Season 1 Episode 3",
         link: "https://drive.google.com/file/d/1iWxi8KgWMG1xLRTXyh48GyicU0Gt3-qY/preview",
-        description: "wind breaker season 1 ",
+        description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
-        title: "wind breaker season 1 episode 4",
+        title: "Wind Breaker Season 1 Episode 4",
         link: "https://drive.google.com/file/d/1XK2YeznZg7XoiNhDDY5UzTOUq27Ylxod/preview",
-        description: "wind breaker season 1 ",
+        description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
-      },{
-        title: "wind breaker season 1 episode 5",
+      },
+      {
+        title: "Wind Breaker Season 1 Episode 5",
         link: "https://drive.google.com/file/d/1bZhuST7oWNgPV_-I2sZotXsYN_BquadU/preview",
-        description: "wind breaker season 1 ",
+        description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
-      },{
-        title: "wind breaker season 1 episode 6",
+      },
+      {
+        title: "Wind Breaker Season 1 Episode 6",
         link: "https://drive.google.com/file/d/1mldGjxnkg8C_UsYKpWCKGQKLlf57Zcv8/preview",
-        description: "wind breaker season 1 ",
+        description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
-      },{
-        title: "wind breaker season 1 episode 7",
+      },
+      {
+        title: "Wind Breaker Season 1 Episode 7",
         link: "https://drive.google.com/file/d/1qfo-JMGIhOpMQIYIFqehgj0ofcX7lMIr/preview",
-        description: "wind breaker season 1",
+        description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
-      },{
-        title: "wind breaker season 1 episode 8",
+      },
+      {
+        title: "Wind Breaker Season 1 Episode 8",
         link: "https://drive.google.com/file/d/1RIEtOzOIFwB8-BzWg7NfktFLVpayhPBo/preview",
-        description: "wind breaker season 1 ",
+        description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
-      },{
-        title: "wind breaker season 1 episode 9",
+      },
+      {
+        title: "Wind Breaker Season 1 Episode 9",
         link: "https://drive.google.com/file/d/16nZCbYtJ8AbVLB-KWJdoNTGGTlaVMIDt/preview",
-        description: "wind breaker season 1 ",
+        description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
-      },{
-        title: "wind breaker season 1 episode 10",
+      },
+      {
+        title: "Wind Breaker Season 1 Episode 10",
         link: "https://drive.google.com/file/d/1Nt37GqgUuqiFw5pW9OJMS5LGhtUj3CWv/preview",
-        description: "wind breaker season 1 ",
+        description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
-      },{
-        title: "wind breaker season 1 episode 11",
+      },
+      {
+        title: "Wind Breaker Season 1 Episode 11",
         link: "https://drive.google.com/file/d/1NSeH36nxjf5FES96xvQHzrtlFS0WiYyG/preview",
-        description: "wind breaker season 1 ",
+        description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
-      },{
-        title: "wind breaker season 1 episode 12",
+      },
+      {
+        title: "Wind Breaker Season 1 Episode 12",
         link: "https://drive.google.com/file/d/1K0m7iAEwoVMb4FOgqYpsyYbOtzgwBJ7j/preview",
-        description: "wind breaker season 1 ",
+        description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
-      
+      }
     ];
 
     const list = document.getElementById('episodeList');
@@ -216,6 +225,8 @@
     document.getElementById('closeAd').addEventListener('click', () => {
       document.getElementById('adBox').style.display = 'none';
     });
+
   </script>
+
 </body>
-    </html>
+</html>
