--- a/index.html
+++ b/index.html
@@ -4,123 +4,182 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DOOSH HUB - Watch Anime, Bollywood, Hollywood, K-Drama, C-Drama</title>
-  
+  <title>DOOSH HUB</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+
   <!-- Favicon -->
   <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" type="image/jpeg" sizes="32x32" />
 
-  <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Stream the best of Anime, Bollywood, Hollywood, Korean and Chinese Dramas in Hindi and English on DOOSH HUB. Explore now!" />
-  <meta name="keywords" content="Anime Hindi Dubbed, Bollywood Movies, Hollywood Hindi, Korean Drama, Chinese Drama, Free Streaming, DOOSH HUB" />
-  <meta name="author" content="DOOSH HUB" />
-
-  <!-- Open Graph for Social Media -->
-  <meta property="og:title" content="DOOSH HUB - Your Ultimate Entertainment Hub" />
-  <meta property="og:description" content="Watch Anime, Bollywood, Hollywood Movies, K-Dramas, and C-Dramas in Hindi & English." />
+  <!-- Open Graph Meta (for Facebook, WhatsApp sharing) -->
+  <meta property="og:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
+  <meta property="og:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
   <meta property="og:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
   <meta property="og:url" content="https://www.dooshtoons.linkpc.net/" />
   <meta property="og:type" content="website" />
 
-  <!-- Twitter Card -->
+  <!-- Twitter Card Meta -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="DOOSH HUB - Ultimate Streaming Experience" />
-  <meta name="twitter:description" content="Dive into the world of Anime, Movies, Dramas and more at DOOSH HUB." />
+  <meta name="twitter:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
+  <meta name="twitter:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
   <meta name="twitter:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
 
   <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR-GA-ID"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX'); // <-- Replace with your real Google Analytics ID
+    gtag('config', 'YOUR-GA-ID');
   </script>
 
   <style>
+    /* Fantasy Fire Animation */
     body {
       background: #0f0f0f;
       font-family: 'Roboto', sans-serif;
       overflow-x: hidden;
       color: white;
+      animation: fireGlow 10s infinite alternate;
     }
-    .fire-glow {
-      animation: fireGlow 8s infinite alternate;
-    }
+
     @keyframes fireGlow {
-      0% { background-color: #0f0f0f; box-shadow: 0 0 40px #ff00ff, 0 0 80px #ff4500 inset; }
-      50% { background-color: #1a1a1a; box-shadow: 0 0 60px #ff4500, 0 0 100px #ff00ff inset; }
-      100% { background-color: #0f0f0f; box-shadow: 0 0 50px #ff00ff, 0 0 70px #ff4500 inset; }
+      0% {
+        background-color: #0f0f0f;
+        box-shadow: 0 0 40px #ff00ff, 0 0 80px #ff4500 inset;
+      }
+
+      50% {
+        background-color: #1a1a1a;
+        box-shadow: 0 0 60px #ff4500, 0 0 100px #ff00ff inset;
+      }
+
+      100% {
+        background-color: #0f0f0f;
+        box-shadow: 0 0 50px #ff00ff, 0 0 70px #ff4500 inset;
+      }
     }
-    #adBox {
+
+    /* Header */
+    header {
       position: fixed;
-      bottom: 15px;
-      right: 15px;
-      width: 280px;
-      background: #1f2937;
-      padding: 10px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.5);
-      z-index: 1000;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 9999;
+      transition: all 0.3s ease-in-out;
     }
-    #closeAd {
-      position: absolute;
-      top: 5px;
-      right: 8px;
+
+    header.shrink {
+      background: rgba(0, 0, 0, 0.9);
+      padding: 10px;
+    }
+
+    /* Button Styling */
+    .main-btn {
+      background-color: #ff00ff;
       color: white;
-      background: transparent;
-      border: none;
-      font-size: 20px;
-      cursor: pointer;
+      padding: 15px 30px;
+      border-radius: 10px;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+      display: inline-block;
+      margin-top: 150px;
+    }
+
+    .main-btn:hover {
+      background-color: #ff4500;
+    }
+
+    /* Toast Animation (Copy Button) */
+    .toast {
+      position: fixed;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0, 0, 0, 0.7);
+      padding: 12px 20px;
+      border-radius: 8px;
+      color: #ff00ff;
+      display: none;
+      font-size: 1.2rem;
+      animation: slideToast 3s ease-in-out;
+    }
+
+    @keyframes slideToast {
+      0% {
+        bottom: -50px;
+      }
+      100% {
+        bottom: 10px;
+      }
+    }
+
+    /* Discord Button Styling */
+    #discordBtn {
+      position: fixed;
+      bottom: 80px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #7289da;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-size: 1.2rem;
+      text-align: center;
+      display: block;
+      text-decoration: none;
+    }
+
+    #discordBtn:hover {
+      background-color: #5b6eae;
     }
   </style>
 
 </head>
 
-<body class="fire-glow">
+<body>
 
-  <!-- Logo and Hero Section -->
-  <div class="flex flex-col items-center justify-center min-h-screen text-center p-6 space-y-8">
-    <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="DOOSH HUB Logo" class="w-32 h-32 rounded-full shadow-lg" />
-    <h1 class="text-5xl font-extrabold text-pink-500 animate-pulse">
-      Welcome to DOOSH HUB
-    </h1>
-    <p class="text-xl text-gray-300 max-w-xl">
-      Explore the finest collection of Anime, Bollywood & Hollywood Movies, K-Dramas, and C-Dramas — dubbed and subbed in Hindi & English.
-    </p>
+  <!-- Toast Message -->
+  <div id="copyToast" class="toast">Copied to Clipboard!</div>
 
-    <!-- Main Button to Enter Website -->
-    <a href="index.2.html" class="bg-pink-500 hover:bg-pink-600 text-white font-bold py-4 px-8 rounded-full text-2xl transition duration-300">
-      Enter DOOSH HUB
-    </a>
+  <!-- Discord Button -->
+  <a id="discordBtn" href="https://discord.gg/Wj32meHh" target="_blank">Join Us on Discord</a>
 
-    <!-- Discord Button -->
-    <a href="https://discord.gg/Wj32meHh" target="_blank" class="bg-gray-800 hover:bg-gray-700 text-white font-semibold py-2 px-6 rounded-lg mt-4 flex items-center gap-2">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="#5865F2" viewBox="0 0 24 24">
-        <path d="M20.317 4.369a19.791 19.791 0 00-4.885-1.515.074.074 0 00-.078.037 13.695 13.695 0 00-.635 1.3 19.736 19.736 0 00-5.97 0 13.583 13.583 0 00-.645-1.3.077.077 0 00-.078-.037 19.736 19.736 0 00-4.885 1.515.07.07 0 00-.032.027C2.944 9.045 2.14 13.59 2.5 18.086a.08.08 0 00.031.055 19.9 19.9 0 005.993 3.036.078.078 0 00.084-.027 13.907 13.907 0 001.197-1.929.075.075 0 00-.04-.102 13.248 13.248 0 01-1.885-.913.077.077 0 01-.008-.13c.126-.094.253-.192.377-.291a.074.074 0 01.077-.01c3.927 1.79 8.18 1.79 12.062 0a.073.073 0 01.078.009c.124.099.251.197.378.292a.077.077 0 01-.006.13 12.949 12.949 0 01-1.886.913.075.075 0 00-.04.102c.36.664.754 1.317 1.196 1.929a.075.075 0 00.084.028 19.821 19.821 0 005.994-3.036.075.075 0 00.031-.054c.433-5.229-.714-9.733-3.549-13.69a.061.061 0 00-.031-.028zM8.02 15.331c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.418 2.157-2.418 1.21 0 2.175 1.092 2.157 2.418 0 1.334-.955 2.419-2.157 2.419zm7.956 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.418 2.157-2.418 1.21 0 2.175 1.092 2.157 2.418 0 1.334-.947 2.419-2.157 2.419z"/>
-      </svg>
-      Join Us on Discord
-    </a>
-  </div>
+  <!-- Header with Button -->
+  <header id="header" class="p-4">
+    <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" class="w-12 h-12 inline-block rounded-full" />
+    <a href="index.2.html" class="main-btn">Go to Doosh Hub</a>
+  </header>
 
-  <!-- Carousel (Slides) Section -->
+  <!-- Fantasy Fire Animation Container -->
+  <div id="fireContainer"></div>
+
+  <!-- Content Section -->
   <section class="p-6">
-    <div id="carousel" class="flex gap-4 overflow-x-auto no-scrollbar">
-      <img src="InShot_20250427_105208488.jpg" alt="Wind Breaker Season 1" class="w-72 h-44 rounded-lg object-cover flex-shrink-0" />
-      <img src="unnamed (4).jpg" alt="Dragon Ball Prison Planet" class="w-72 h-44 rounded-lg object-cover flex-shrink-0" />
-      <img src="unnamed (1).jpg" alt="Shinchan Ninja Mononoke" class="w-72 h-44 rounded-lg object-cover flex-shrink-0" />
-      <img src="WIND BREAKER S2.jpg" alt="Wind Breaker Season 2" class="w-72 h-44 rounded-lg object-cover flex-shrink-0" />
-      <img src="dopatti.jpeg" alt="Do Patti Movie" class="w-72 h-44 rounded-lg object-cover flex-shrink-0" />
-    </div>
+    <h1 class="text-3xl text-center font-bold mb-6">About Doosh Hub</h1>
+    <p>Welcome to Doosh Hub, your premier online destination for a wide range of global entertainment...</p>
   </section>
 
-  <!-- Ads Box -->
-  <div id="adBox">
-    <button id="closeAd" onclick="document.getElementById('adBox').style.display='none'">×</button>
-    <iframe src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a" width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
-  </div>
+  <script>
+    // Function for Toast Message
+    function showToast() {
+      const toast = document.getElementById('copyToast');
+      toast.style.display = 'block';
+      setTimeout(function () {
+        toast.style.display = 'none';
+      }, 3000);
+    }
+
+    // Trigger Copy Toast on Page Load (Example)
+    window.onload = function () {
+      setTimeout(showToast, 1000); // Example showing toast after 1 second
+    }
+  </script>
 
 </body>
 
