--- a/copyright.html
+++ b/copyright.html
@@ -2,78 +2,217 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Copyright Notice - DOOSH HUB</title>
-
-  <!-- Tailwind CSS -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Doosh Hub - Copyright Information</title>
+  <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" type="image/jpeg" sizes="32x32" />
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Read about DOOSH HUB's copyright policies. We respect creators and do not host any content ourselves." />
-  <meta name="keywords" content="DOOSH HUB, copyright policy, DMCA, anime streaming, movies streaming" />
-  <meta name="author" content="DOOSH HUB" />
-
   <style>
+    /* Fire Neon Background */
     body {
       background: #0f0f0f;
-      color: #e5e5e5;
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Roboto', sans-serif;
+      overflow-x: hidden;
+      color: white;
+      animation: fireGlow 10s infinite alternate;
     }
-    a {
-      color: #38bdf8;
+
+    @keyframes fireGlow {
+      0% {
+        background-color: #0f0f0f;
+        box-shadow: 0 0 40px #ff00ff, 0 0 80px #ff4500 inset;
+      }
+
+      50% {
+        background-color: #1a1a1a;
+        box-shadow: 0 0 60px #ff4500, 0 0 100px #ff00ff inset;
+      }
+
+      100% {
+        background-color: #0f0f0f;
+        box-shadow: 0 0 50px #ff00ff, 0 0 70px #ff4500 inset;
+      }
     }
-    a:hover {
-      color: #0ea5e9;
-      text-decoration: underline;
+
+    /* Header */
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 9999;
+      padding: 20px;
+    }
+
+    .header-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .header-content img {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+    }
+
+    .header-content a {
+      color: white;
+      text-decoration: none;
+      font-size: 1.2rem;
+    }
+
+    .header-content a:hover {
+      color: #ff00ff;
+    }
+
+    /* Copyright Content */
+    .copyright-container {
+      padding: 100px 20px;
+      text-align: center;
+      margin-top: 80px;
+    }
+
+    .copyright-container h1 {
+      font-size: 2.5rem;
+      font-weight: bold;
+      margin-bottom: 30px;
+      color: #ff00ff;
+      text-shadow: 0 0 20px #ff00ff, 0 0 30px #ff4500;
+    }
+
+    .copyright-text {
+      max-width: 800px;
+      margin: 0 auto;
+      font-size: 1.2rem;
+      line-height: 1.8;
+      color: white;
+      text-align: left;
+    }
+
+    .btn-container {
+      margin-top: 30px;
+      text-align: center;
+    }
+
+    .btn-container a {
+      padding: 12px 30px;
+      background-color: #ff00ff;
+      color: white;
+      text-decoration: none;
+      border-radius: 50px;
+      font-size: 1.2rem;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+    }
+
+    .btn-container a:hover {
+      background-color: #ff4500;
+    }
+
+    /* Discord Button */
+    .discord-btn {
+      padding: 10px 20px;
+      background-color: #7289DA;
+      color: white;
+      font-size: 1.2rem;
+      text-decoration: none;
+      border-radius: 50px;
+      margin-top: 20px;
+    }
+
+    .discord-btn:hover {
+      background-color: #4d69a3;
+    }
+
+    .copy-btn {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      background-color: #ff00ff;
+      color: white;
+      font-size: 1.5rem;
+      padding: 10px 20px;
+      border-radius: 50%;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+      cursor: pointer;
+    }
+
+    .copy-btn:hover {
+      background-color: #ff4500;
     }
   </style>
 </head>
 
-<body class="min-h-screen flex flex-col justify-between">
+<body>
 
-  <main class="flex flex-col items-center justify-center p-8 text-center">
-    <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="DOOSH HUB Logo" class="w-24 h-24 rounded-full shadow-lg mb-6" />
+  <!-- Header -->
+  <header>
+    <div class="header-content">
+      <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" />
+      <a href="index.2.html">Go to Doosh Hub</a>
+    </div>
+  </header>
 
-    <h1 class="text-4xl font-bold text-pink-500 mb-4">Copyright Information</h1>
+  <!-- Copyright Content -->
+  <div class="copyright-container">
+    <h1>Doosh Hub - Copyright Information</h1>
 
-    <p class="max-w-3xl text-lg leading-relaxed text-gray-300 mb-8">
-      Welcome to <strong>DOOSH HUB</strong>!  
-      We are a community-driven platform that provides access to anime, movies, and dramas already available on the internet.  
-      <br /><br />
-      <strong>Important Note:</strong>  
-      - We do <u>not host</u> any videos, media files, or live streams on our servers.  
-      - All content is sourced through publicly available websites and third-party platforms.  
-      - If you find your copyrighted work linked here and you wish it to be removed, please kindly contact us via our <a href="https://discord.gg/Wj32meHh" target="_blank">Discord Server</a>.  
-      - We will respond promptly to DMCA takedown notices or removal requests.
-      <br /><br />
-      <strong>Legal Disclaimer:</strong>  
-      All trademarks, trade names, logos, images, and copyrighted material belong to their respective owners.  
-      DOOSH HUB does not claim any ownership of any media content displayed here.
-    </p>
+    <div class="copyright-text">
+      <p>Welcome to Doosh Hub, the go-to platform for streaming movies, TV shows, anime, and more! We offer a variety of content, including Bollywood, Hollywood, anime, K-dramas, C-dramas, and much more. Please read the important copyright and legal information below to understand your rights and responsibilities when using our platform.</p>
 
-    <a href="index.html" class="mt-6 inline-block bg-pink-500 hover:bg-pink-600 text-white font-bold py-3 px-6 rounded-full text-lg">
-      Back to Home
-    </a>
-  </main>
+      <h3>1. Copyright Notice</h3>
+      <p>Doosh Hub does not host or store any content on our servers. The movies, TV shows, anime, K-dramas, C-dramas, and other media accessible through our platform are hosted by third-party websites. We do not own, upload, or claim any rights over this content. All intellectual property rights to the media are held by the respective creators, production companies, and distributors.</p>
 
-  <!-- Support Section -->
-  <footer class="bg-gray-900 text-center p-6">
-    <p class="text-gray-400 mb-4">
-      Need help? Questions? DMCA request?  
-      <br />
-      Join our friendly community on
-    </p>
+      <h3>2. Legal Compliance</h3>
+      <p>Doosh Hub is committed to adhering to copyright laws and ethical standards. We do not endorse or facilitate illegal downloading, distribution, or streaming of copyrighted content. If you are the copyright owner of any content listed on our platform and wish to request its removal, please reach out to us through our Copyright Notice section.</p>
 
-    <a href="https://discord.gg/Wj32meHh" target="_blank" class="inline-flex items-center gap-2 bg-gray-800 hover:bg-gray-700 text-white font-semibold py-2 px-6 rounded-lg">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="#5865F2" viewBox="0 0 24 24">
-        <path d="M20.317 4.369a19.791 19.791 0 00-4.885-1.515.074.074 0 00-.078.037 13.695 13.695 0 00-.635 1.3 19.736 19.736 0 00-5.97 0 13.583 13.583 0 00-.645-1.3.077.077 0 00-.078-.037 19.736 19.736 0 00-4.885 1.515.07.07 0 00-.032.027C2.944 9.045 2.14 13.59 2.5 18.086a.08.08 0 00.031.055 19.9 19.9 0 005.993 3.036.078.078 0 00.084-.027 13.907 13.907 0 001.197-1.929.075.075 0 00-.04-.102 13.248 13.248 0 01-1.885-.913.077.077 0 01-.008-.13c.126-.094.253-.192.377-.291a.074.074 0 01.077-.01c3.927 1.79 8.18 1.79 12.062 0a.073.073 0 01.078.009c.124.099.251.197.378.292a.077.077 0 01-.006.13 12.949 12.949 0 01-1.886.913.075.075 0 00-.04.102c.36.664.754 1.317 1.196 1.929a.075.075 0 00.084.028 19.821 19.821 0 005.994-3.036.075.075 0 00.031-.054c.433-5.229-.714-9.733-3.549-13.69a.061.061 0 00-.031-.028zM8.02 15.331c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.418 2.157-2.418 1.21 0 2.175 1.092 2.157 2.418 0 1.334-.955 2.419-2.157 2.419zm7.956 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.418 2.157-2.418 1.21 0 2.175 1.092 2.157 2.418 0 1.334-.947 2.419-2.157 2.419z"/>
-      </svg>
-      Support / DMCA Help
-    </a>
+      <h3>3. Content Accuracy</h3>
+      <p>We strive to ensure that all information provided on Doosh Hub is accurate and up-to-date, but we cannot guarantee the availability or correctness of external content linked through our platform. Third-party sites may change their content or links without notice.</p>
 
-    <p class="text-xs text-gray-500 mt-4">&copy; 2025 DOOSH HUB. All rights reserved.</p>
-  </footer>
+      <h3>4. No Downloads</h3>
+      <p>We strictly advise against downloading any media content from external links provided on our website. All media is streamed via third-party websites, and we recommend that users avoid downloading files from untrusted or unofficial sources.</p>
+
+      <h3>5. Advertising and Pop-ups</h3>
+      <p>Doosh Hub is not responsible for the content of advertisements, pop-ups, or other promotional materials displayed on third-party websites linked through our platform.</p>
+
+      <h3>6. User Responsibility</h3>
+      <p>By using Doosh Hub, you agree to take full responsibility for your actions on external sites linked to our platform.</p>
+
+      <h3>7. Limitation of Liability</h3>
+      <p>Doosh Hub and its affiliates are not liable for any direct, indirect, incidental, or consequential damages arising from the use of our platform or the content linked through third-party websites.</p>
+
+      <h3>8. For Copyright Issues or Reports</h3>
+      <p>If you believe that any content on Doosh Hub infringes upon your copyright or if you wish to submit a report regarding any issue, please contact us directly.</p>
+
+      <h3>9. Promote Your Content</h3>
+      <p>Are you a content creator or distributor looking to promote your movies, TV shows, or series? Please reach out to us through the Contact Us page or join our Discord community to discuss promotion opportunities.</p>
+
+      <h3>10. Reviews and Feedback</h3>
+      <p>We encourage you to leave reviews for the content you discover on Doosh Hub. Join our Discord community to share your feedback, reviews, and suggestions with us.</p>
+    </div>
+
+    <div class="btn-container">
+      <a href="index.2.html">Go to Main Site</a>
+    </div>
+
+    <a href="https://discord.gg/Wj32meHh" class="discord-btn" target="_blank">Join our Discord</a>
+  </div>
+
+  <!-- Copy to Clipboard Button -->
+  <button class="copy-btn" onclick="copyText()">Copy Copyright Text</button>
+
+  <!-- Scripts -->
+  <script>
+    function copyText() {
+      const text = `Copyright Notice: Doosh Hub does not host or store any content on our servers. The movies, TV shows, anime, K-dramas, C-dramas, and other media accessible through our platform are hosted by third-party websites. We do not own, upload, or claim any rights over this content.`;
+      navigator.clipboard.writeText(text).then(function () {
+        alert("Copyright text copied to clipboard!");
+      }).catch(function (error) {
+        alert("Error copying text: " + error);
+      });
+    }
+  </script>
 
 </body>
 
