--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Favicon -->
   <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" type="image/jpeg" sizes="32x32" />
 
-  <!-- Open Graph Meta (for Facebook, WhatsApp sharing) -->
+  <!-- Open Graph Meta -->
   <meta property="og:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
   <meta property="og:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
   <meta property="og:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
@@ -23,162 +23,101 @@
   <meta name="twitter:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
   <meta name="twitter:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
 
-  <!-- Google Analytics -->
+  <!-- Google Analytics (replace YOUR-GA-ID) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR-GA-ID"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'YOUR-GA-ID');
   </script>
 
   <style>
-    /* Fantasy Fire Animation */
     body {
       background: #0f0f0f;
       font-family: 'Roboto', sans-serif;
-      overflow-x: hidden;
       color: white;
+      overflow-x: hidden;
       animation: fireGlow 10s infinite alternate;
     }
 
     @keyframes fireGlow {
-      0% {
-        background-color: #0f0f0f;
-        box-shadow: 0 0 40px #ff00ff, 0 0 80px #ff4500 inset;
-      }
-
-      50% {
-        background-color: #1a1a1a;
-        box-shadow: 0 0 60px #ff4500, 0 0 100px #ff00ff inset;
-      }
-
-      100% {
-        background-color: #0f0f0f;
-        box-shadow: 0 0 50px #ff00ff, 0 0 70px #ff4500 inset;
-      }
+      0% { background-color: #0f0f0f; box-shadow: 0 0 40px #ff00ff, 0 0 80px #ff4500 inset; }
+      50% { background-color: #1a1a1a; box-shadow: 0 0 60px #ff4500, 0 0 100px #ff00ff inset; }
+      100% { background-color: #0f0f0f; box-shadow: 0 0 50px #ff00ff, 0 0 70px #ff4500 inset; }
     }
 
-    /* Header */
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.6);
-      z-index: 9999;
-      transition: all 0.3s ease-in-out;
-    }
-
-    header.shrink {
-      background: rgba(0, 0, 0, 0.9);
-      padding: 10px;
-    }
-
-    /* Button Styling */
-    .main-btn {
-      background-color: #ff00ff;
-      color: white;
-      padding: 15px 30px;
-      border-radius: 10px;
-      text-align: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-      display: inline-block;
-      margin-top: 150px;
-    }
-
-    .main-btn:hover {
-      background-color: #ff4500;
-    }
-
-    /* Toast Animation (Copy Button) */
     .toast {
       position: fixed;
-      bottom: 10px;
+      bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
-      background: rgba(0, 0, 0, 0.7);
+      background: rgba(0, 0, 0, 0.8);
       padding: 12px 20px;
-      border-radius: 8px;
+      border-radius: 10px;
       color: #ff00ff;
-      display: none;
       font-size: 1.2rem;
+      display: none;
       animation: slideToast 3s ease-in-out;
+      z-index: 9999;
     }
 
     @keyframes slideToast {
-      0% {
-        bottom: -50px;
-      }
-      100% {
-        bottom: 10px;
-      }
-    }
-
-    /* Discord Button Styling */
-    #discordBtn {
-      position: fixed;
-      bottom: 80px;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: #7289da;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 8px;
-      font-size: 1.2rem;
-      text-align: center;
-      display: block;
-      text-decoration: none;
-    }
-
-    #discordBtn:hover {
-      background-color: #5b6eae;
+      0% { opacity: 0; bottom: 0; }
+      50% { opacity: 1; bottom: 20px; }
+      100% { opacity: 0; bottom: 0; }
     }
   </style>
-
 </head>
 
-<body>
+<body class="flex flex-col min-h-screen">
 
-  <!-- Toast Message -->
+  <!-- Toast -->
   <div id="copyToast" class="toast">Copied to Clipboard!</div>
 
-  <!-- Discord Button -->
-  <a id="discordBtn" href="https://discord.gg/Wj32meHh" target="_blank">Join Us on Discord</a>
-
-  <!-- Header with Button -->
-  <header id="header" class="p-4">
-    <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" class="w-12 h-12 inline-block rounded-full" />
-    <a href="index.2.html" class="main-btn">Go to Doosh Hub</a>
+  <!-- Header -->
+  <header class="w-full fixed top-0 left-0 bg-black/60 flex items-center justify-between px-6 py-4 z-50 shadow-md">
+    <div class="flex items-center gap-3">
+      <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" class="w-12 h-12 rounded-full" />
+      <h1 class="text-2xl font-bold text-pink-500">DOOSH HUB</h1>
+    </div>
+    <a href="index2.html" class="bg-pink-500 hover:bg-pink-600 text-white px-6 py-2 rounded-xl text-lg font-semibold transition-all">Enter Hub</a>
   </header>
 
-  <!-- Fantasy Fire Animation Container -->
-  <div id="fireContainer"></div>
+  <!-- Spacer for header -->
+  <div class="h-24"></div>
 
-  <!-- Content Section -->
-  <section class="p-6">
-    <h1 class="text-3xl text-center font-bold mb-6">About Doosh Hub</h1>
-    <p>Welcome to Doosh Hub, your premier online destination for a wide range of global entertainment...</p>
-  </section>
+  <!-- Main Content -->
+  <main class="flex-grow flex flex-col items-center justify-center text-center px-4">
+    <h2 class="text-4xl md:text-6xl font-extrabold mb-6 text-pink-400 animate-pulse">Welcome to Doosh Hub</h2>
+    <p class="max-w-3xl text-lg md:text-xl text-gray-300 mb-8">
+      Your premier destination for streaming animes, movies, and more — all with a 🔥 neon vibe!
+    </p>
+    <a href="https://discord.gg/Wj32meHh" target="_blank"
+      class="bg-indigo-600 hover:bg-indigo-700 text-white px-8 py-3 rounded-full text-xl font-bold transition-all mb-4">
+      Join Us on Discord
+    </a>
+  </main>
+
+  <!-- Footer -->
+  <footer class="text-center py-6 text-gray-400 text-sm">
+    © 2025 DOOSH HUB. All Rights Reserved.
+  </footer>
 
   <script>
-    // Function for Toast Message
+    // Toast logic
     function showToast() {
       const toast = document.getElementById('copyToast');
       toast.style.display = 'block';
-      setTimeout(function () {
+      setTimeout(() => {
         toast.style.display = 'none';
       }, 3000);
     }
 
-    // Trigger Copy Toast on Page Load (Example)
+    // Example toast on page load
     window.onload = function () {
-      setTimeout(showToast, 1000); // Example showing toast after 1 second
-    }
+      setTimeout(showToast, 1000);
+    };
   </script>
 
 </body>
