--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" class="w-12 h-12 rounded-full" />
       <h1 class="text-2xl font-bold text-pink-500">DOOSH HUB</h1>
     </div>
-    <a href="index2.html" class="bg-pink-500 hover:bg-pink-600 text-white px-6 py-2 rounded-xl text-lg font-semibold transition-all">Enter Hub</a>
+    <a href="index.2.html" class="bg-pink-500 hover:bg-pink-600 text-white px-6 py-2 rounded-xl text-lg font-semibold transition-all">Enter Hub</a>
   </header>
 
   <!-- Spacer for header -->
